--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,5 +122,5 @@ triage:issues:
   script:
     - gem install gitlab-triage
     - gitlab-triage -n -d --token $API_TOKEN --source-id $SOURCE_ID
-  only:
-    - schedules
+  # only:
+    # - schedules
