--- a/configure.ac
+++ b/configure.ac
@@ -83,7 +83,7 @@ GTK3_CFLAGS="$GTK3_CFLAGS -DGDK_VERSION_MIN_REQUIRED=GDK_VERSION_3_10 -DGDK_VERS
 
 AC_ARG_WITH([appindicator],
             AS_HELP_STRING([--with-appindicator=no|yes|auto|ayatana|ubuntu], [Build with lib(ayatana-)appindicator support in addition to xembed systray support.]),
-            [], [with_appindicator=no])
+            [], [with_appindicator=auto])
 if test "$with_appindicator" != "no"; then
 	if test "$with_appindicator" = "yes" -o "$with_appindicator" = "auto"; then
 		PKG_CHECK_MODULES(APPINDICATOR, ayatana-appindicator3-0.1, [with_appindicator=ayatana], [with_appindicator=no])
