gitlab-ci: don't automatically run flatpak test
It currently fails.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,6 +128,7 @@ flatpak:
     APP_ID: "org.gnome.nm_connection_editor"
     BUNDLE: "nm-connection-editor.flatpak"
   extends: .flatpak
+  when: manual
 
 triage:issues:
   stage: triage
