tests: add a test for the ethernet dialog
This is a small standalone program that presents the ethernet security
dialog. Invoking this dialog would otherwise requires a somewhat
complicated setup, making it difficult to verify the effect of changes
in the code.

--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,7 @@ src/nm-applet
 src/applet-dbus-bindings.h
 src/applet-resources.c
 src/applet-resources.h
+src/tests/ethernet-dialog
 man/*.1
 
 /test-driver
