applet: replace lock icon for WEP networks with an exclaimation mark
This is supposed to indicate that the network is not secure, analogously
to what web browsers do for bad certificates.

It's not beautiful, but I guess it's not a huge problem. By now the applet
is a probably a niche tool.

https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/112

--- a/Makefile.am
+++ b/Makefile.am
@@ -65,6 +65,7 @@ icon22_DATA = \
 	icons/22/nm-device-wired-secure.png \
 	icons/22/nm-device-wired.png \
 	icons/22/nm-device-wwan.png \
+	icons/22/nm-insecure-warn.png \
 	icons/22/nm-mb-roam.png \
 	icons/22/nm-no-connection.png \
 	icons/22/nm-secure-lock.png \
