gschema: bring back org.gnome.nm-applet schema
In commit 6b1aaade74cf ('gschema: move "org.gnome.nm-applet.gschema.xml"
from network-manager-applet to libnma'), both "org.gnome.nm-applet" and
"org.gnome.nm-applet.eap" have been moved over to libnma, whereas only
the latter should have been.

Bring it back.

See-also: https://gitlab.gnome.org/GNOME/libnma/-/merge_requests/42

https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/125

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,8 @@ test-*.log
 nm-applet.conf
 nm-applet.desktop
 nm-connection-editor.desktop
+org.gnome.nm-applet.gschema.xml
+org.gnome.nm-applet.gschema.valid
 org.gnome.nm-connection-editor.appdata.xml
 src/connection-editor/nm-connection-editor
 src/connection-editor/nm-connection-editor-service-glue.h
@@ -153,7 +155,5 @@ libnma.types
 # but they were on older versions. Thus keep ignoring them
 # otherwise when switching branches these untracked files show
 # up.
-/org.gnome.nm-applet.gschema.xml
-/org.gnome.nm-applet.gschema.valid
 src/wireless-security/ws-resources.c
 src/wireless-security/ws-resources.h
