gschema: bring back org.gnome.nm-applet schema
In commit 6b1aaade74cf ('gschema: move "org.gnome.nm-applet.gschema.xml"
from network-manager-applet to libnma'), both "org.gnome.nm-applet" and
"org.gnome.nm-applet.eap" have been moved over to libnma, whereas only
the latter should have been.

Bring it back.

See-also: https://gitlab.gnome.org/GNOME/libnma/-/merge_requests/42

--- a/configure.ac
+++ b/configure.ac
@@ -176,6 +176,7 @@ AC_CONFIG_FILES([
 Makefile
 man/nm-applet.1
 man/nm-connection-editor.1
+org.gnome.nm-applet.gschema.xml
 po/Makefile.in
 ])
 AC_OUTPUT
