gitignore: ignore clangd and vscode folders

--- a/.gitignore
+++ b/.gitignore
@@ -150,6 +150,9 @@ libnma.prerequisites
 libnma.signals
 libnma.types
 
+/.cache
+/.vscode
+
 
 # The following names are no longer present on this branch,
 # but they were on older versions. Thus keep ignoring them
