appdata: update screenshot URL, add URL for translate and vcs-browser
https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/145

--- a/nm-connection-editor.appdata.xml.in
+++ b/nm-connection-editor.appdata.xml.in
@@ -16,12 +16,14 @@
 
   <screenshots>
     <screenshot type="default">
-      <image width="772" height="548">https://git.gnome.org/browse/network-manager-applet/plain/nm-connection-editor.png</image>
+      <image width="772" height="548">https://gitlab.gnome.org/GNOME/network-manager-applet/-/raw/main/nm-connection-editor.png</image>
     </screenshot>
   </screenshots>
 
   <url type="homepage">https://networkmanager.dev</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/network-manager-applet/issues</url>
+  <url type="translate">https://l10n.gnome.org/module/network-manager-applet/</url>
+  <url type="vcs-browser">https://gitlab.gnome.org/GNOME/network-manager-applet</url>
   <update_contact>networkmanager-maint@gnome.bugs</update_contact>
   <translation type="gettext">nm-applet</translation>
   <developer_name>The NetworkManager Developers</developer_name>
