--- a/org.gnome.nm-connection-editor.appdata.xml.in
+++ b/org.gnome.nm-connection-editor.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2015 Ethirajan D <ethirajand@cdac.in> -->
-<component type="desktop">
-  <id>nm-connection-editor.desktop</id>
+<component type="desktop-application">
+  <id>org.gnome.nm-connection-editor</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
   <name>NetworkManager</name>
@@ -29,6 +29,8 @@
   <developer_name>The NetworkManager Developers</developer_name>
 
   <content_rating type="oars-1.0" />
+
+  <launchable type="desktop-id">nm-connection-editor.desktop</launchable>
 
   <releases>
     <release version="1.8.24" date="2019-10-09" />
