--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,7 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 nm-applet.desktop.in
-nm-connection-editor.appdata.xml.in
+org.gnome.nm-connection-editor.appdata.xml.in
 nm-connection-editor.desktop.in
 org.gnome.nm-applet.gschema.xml.in
 shared/nm-utils/nm-shared-utils.c
