appdata: Fix app name
The AppStream metadata file is for the nm-connection-editor, not NetworkManager itself

https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/152

--- a/org.gnome.nm-connection-editor.appdata.xml.in
+++ b/org.gnome.nm-connection-editor.appdata.xml.in
@@ -4,7 +4,7 @@
   <id>org.gnome.nm-connection-editor</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
-  <name>NetworkManager</name>
+  <name>Advanced Network Configuration</name>
   <summary>NetworkManager connection editor</summary>
 
   <description>
