desktop: Add "create" action
This allows application launchers to offer an option
to open the new connection dialog.

--- a/nm-connection-editor.desktop.in
+++ b/nm-connection-editor.desktop.in
@@ -7,3 +7,8 @@ Terminal=false
 StartupNotify=true
 Type=Application
 Categories=GNOME;GTK;Settings;X-GNOME-NetworkSettings;X-GNOME-Utilities;
+Actions=create;
+
+[Desktop Action create]
+Exec=nm-connection-editor --create
+Name=New Connection
