Use appstream for appdata validation test
appstream-glib is under heavy maintenance mode and recommends using
appstream instead.

--- a/meson.build
+++ b/meson.build
@@ -289,11 +289,11 @@ i18n.merge_file(
   po_dir: po_dir,
 )
 
-appstream_util = find_program('appstream-util', required: false)
-if appstream_util.found()
+appstreamcli = find_program('appstreamcli', required: false)
+if appstreamcli.found()
   test('validate-appdata',
-    appstream_util,
-    args: ['validate', '--nonet', appdata],
+    appstreamcli,
+    args: ['validate', '--no-net', '--explain', appdata],
     workdir: meson.current_build_dir(),
   )
 endif
