--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,9 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 nm-applet.desktop.in
-org.gnome.nm-connection-editor.appdata.xml.in
 nm-connection-editor.desktop.in
 org.gnome.nm-applet.gschema.xml.in
+org.gnome.nm-connection-editor.metainfo.xml.in
 shared/nm-utils/nm-shared-utils.c
 src/8021x.ui
 src/ap-menu-item.c
