nm-applet.desktop.in: Add COSMIC to NotShowIn
This patch is used by at least Pop! OS and NixOS, as COSMIC comes with
its own built-in applet

--- a/nm-applet.desktop.in
+++ b/nm-applet.desktop.in
@@ -6,5 +6,5 @@ Exec=nm-applet
 Terminal=false
 Type=Application
 NoDisplay=true
-NotShowIn=KDE;GNOME;Budgie
+NotShowIn=KDE;GNOME;Budgie;COSMIC;
 X-GNOME-UsesNotifications=true
