Do not autostart nm-applet for budgie-desktop v10.9.4 budgie-desktop now uses Budgie for XDG_CURRENT_DESKTOP. Previously it used Budgie:GNOME and correctly did not need nm-applet to be autostarted.  Now that budgie has switched to using Budgie, to stop nm-applet from launching, Budgie needs to be included in the list of environments that doesn't need nm-applet. https://github.com/BuddiesOfBudgie/budgie-desktop/pull/739/commits/dc0b54da70e69d8db19d6de86f59802297df1684

--- a/nm-applet.desktop.in
+++ b/nm-applet.desktop.in
@@ -6,5 +6,5 @@ Exec=nm-applet
 Terminal=false
 Type=Application
 NoDisplay=true
-NotShowIn=KDE;GNOME;
+NotShowIn=KDE;GNOME;Budgie
 X-GNOME-UsesNotifications=true
